// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui reducer conversion 1`] = `
Object {
  "conversion": Array [
    "test",
  ],
  "hourly": Object {
    "test": "test",
  },
  "last": Object {
    "bitfinex": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
    "gdax": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
    "gemini": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
    "kraken": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
  },
  "minutely": Object {
    "test": "test",
  },
  "price": Array [
    "test",
  ],
  "status": Array [
    Object {
      "process": "test",
    },
  ],
  "totalSupply": Array [],
  "uiConversion": Array [],
}
`;

exports[`ui reducer default 1`] = `
Object {
  "conversion": Array [],
  "hourly": Object {
    "bitfinex": Array [],
    "gdax": Array [],
    "gemini": Array [],
    "kraken": Array [],
  },
  "last": Object {
    "bitfinex": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
    "gdax": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
    "gemini": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
    "kraken": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
  },
  "minutely": Object {
    "bitfinex": Array [],
    "gdax": Array [],
    "gemini": Array [],
    "kraken": Array [],
  },
  "price": Array [],
  "status": Array [],
  "totalSupply": Array [],
  "uiConversion": Array [],
}
`;

exports[`ui reducer dynamoHourly 1`] = `
Object {
  "conversion": Array [],
  "hourly": Object {
    "test": "test",
  },
  "last": Object {
    "bitfinex": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
    "gdax": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
    "gemini": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
    "kraken": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
  },
  "minutely": Object {
    "bitfinex": Array [],
    "gdax": Array [],
    "gemini": Array [],
    "kraken": Array [],
  },
  "price": Array [],
  "status": Array [
    Object {
      "process": "test",
    },
  ],
  "totalSupply": Array [],
  "uiConversion": Array [],
}
`;

exports[`ui reducer dynamoMinutely 1`] = `
Object {
  "conversion": Array [],
  "hourly": Object {
    "test": "test",
  },
  "last": Object {
    "bitfinex": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
    "gdax": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
    "gemini": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
    "kraken": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
  },
  "minutely": Object {
    "test": "test",
  },
  "price": Array [],
  "status": Array [
    Object {
      "process": "test",
    },
  ],
  "totalSupply": Array [],
  "uiConversion": Array [],
}
`;

exports[`ui reducer dynamoPrices 1`] = `
Object {
  "conversion": Array [],
  "hourly": Object {
    "test": "test",
  },
  "last": Object {
    "bitfinex": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
    "gdax": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
    "gemini": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
    "kraken": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
  },
  "minutely": Object {
    "test": "test",
  },
  "price": Array [
    "test",
  ],
  "status": Array [
    Object {
      "process": "test",
    },
  ],
  "totalSupply": Array [],
  "uiConversion": Array [],
}
`;

exports[`ui reducer dynamoStatus 1`] = `
Object {
  "conversion": Array [],
  "hourly": Object {
    "bitfinex": Array [],
    "gdax": Array [],
    "gemini": Array [],
    "kraken": Array [],
  },
  "last": Object {
    "bitfinex": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
    "gdax": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
    "gemini": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
    "kraken": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
  },
  "minutely": Object {
    "bitfinex": Array [],
    "gdax": Array [],
    "gemini": Array [],
    "kraken": Array [],
  },
  "price": Array [],
  "status": Array [
    Object {
      "process": "test",
    },
  ],
  "totalSupply": Array [],
  "uiConversion": Array [],
}
`;

exports[`ui reducer totalSupply 1`] = `
Object {
  "conversion": Array [
    "test",
  ],
  "hourly": Object {
    "test": "test",
  },
  "last": Object {
    "bitfinex": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
    "gdax": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
    "gemini": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
    "kraken": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
  },
  "minutely": Object {
    "test": "test",
  },
  "price": Array [
    "test",
  ],
  "status": Array [
    Object {
      "process": "test",
    },
  ],
  "totalSupply": Array [
    "test",
  ],
  "uiConversion": Array [
    "test",
  ],
}
`;

exports[`ui reducer ui conversion 1`] = `
Object {
  "conversion": Array [
    "test",
  ],
  "hourly": Object {
    "test": "test",
  },
  "last": Object {
    "bitfinex": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
    "gdax": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
    "gemini": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
    "kraken": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
  },
  "minutely": Object {
    "test": "test",
  },
  "price": Array [
    "test",
  ],
  "status": Array [
    Object {
      "process": "test",
    },
  ],
  "totalSupply": Array [],
  "uiConversion": Array [
    "test",
  ],
}
`;
